# polar_ascii

./: .pre-commit-config.yaml  LICENSE  README.md  polar_ascii.py  pyproject.toml
examples/: flower.py  heart.py  limacon.py  spiral_large.py  spiral_medium.py  spiral_small.py
